# mcp-study

./: .gitignore  README.md  pyproject.toml
src/: client.py  host.py  server.py
temp/: workflow.json
